php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46673 stream_lock call with wrong paramater
Submitted: 2008-11-26 03:07 UTC Modified: 2017-08-28 08:23 UTC
From: kaz at e-2 dot co dot jp Assigned: requinix (profile)
Status: Closed Package: Streams related
PHP Version: 5.2.6 OS: *
Private report: No CVE-ID: None
 [2008-11-26 03:07 UTC] kaz at e-2 dot co dot jp
Description:
------------
When i regist my own stream class, and use flock($h, LOCK_UN).
then steam_lock caled with undefined mode(0x8).

php-5.2.6/ext/standard/file.c
----
321 static int flock_values[] = { LOCK_SH, LOCK_EX, LOCK_UN };
snip...
348 act = flock_values[act - 1] | (operation & 4 ? LOCK_NB : 0);
349 if (php_stream_lock(stream, act)) {


Reproduce code:
---------------
<?php
class StreamTest
{
    function stream_open($path, $mode, $options, &$opened_path) {
		return true;
	}
    function stream_close() {
		return ;
	}
    function stream_lock($mode) {       
		printf( "0x%x\n", $mode ) ;
        return ;
    }
}
stream_register_wrapper("streamtest", "StreamTest");
$handle = fopen( 'streamtest://test', "r" ) ;
flock( $handle, LOCK_EX ) ;
flock( $handle, LOCK_UN ) ;
fclose($handle) ;


Expected result:
----------------
0x2
0x3


Actual result:
--------------
0x2
0x8


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-11-26 04:20 UTC] lbarnaud@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2014-08-16 15:38 UTC] shabazzk at gmail dot com
This bug has resurfaced and I have found this bug in PHP versions 5.3.29, 5.5.15, and 5.6RC4.
 [2017-08-28 08:16 UTC] adolph dot bauer2 at gmail dot com
I found this bug to be reproducable in PHP version 7.1
 [2017-08-28 08:23 UTC] requinix@php.net
-Assigned To: +Assigned To: requinix
 [2017-08-28 08:23 UTC] requinix@php.net
I can't reproduce. https://3v4l.org/7HCA8

Please open a new bug report with whatever you have, including build environment if you built PHP yourself. https://bugs.php.net/report.php
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 02:00:01 2026 UTC