Fixed bug #46673 (stream_lock call with wrong paramater)